--- a/css/elements/_main.scss
+++ b/css/elements/_main.scss
@@ -16,28 +16,27 @@ body {
 }
 
 .frame {
-    display: block;
-    overflow: auto;
+    height: 420px;
     width: 460px;
     display: block;
     padding-bottom: 20px;
     background-color: $secondary;
     margin-left: auto;
     margin-right: auto;
-    border-top: solid 1px rgba(255, 255, 255, .5);
+    border-top: solid 2px rgba(255, 255, 255, .5);
     border-radius: 20px;
     box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.2);
     transition: all .5s ease
 }
 
 .frame-long {
-    height: 615px
+    height: 550px
 }
 
 .nav {
     width: 100%;
     height: 100px;
-    padding-top: 40px;
+    padding-top: 20px;
     opacity: 1;
     transition: all .5s ease
 }
@@ -91,12 +90,10 @@ li {
 
 .form-signin {
     width: 430px;
-    height: 375px;
     font-size: 16px;
     font-weight: 300;
     padding-left: 37px;
     padding-right: 37px;
-    padding-top: 55px;
     transition: opacity .5s ease, transform .5s ease
 }
 
@@ -106,13 +103,13 @@ li {
 }
 
 .form-signup {
+    margin-top: 160px;
     width: 430px;
     height: 375px;
     font-size: 12px;
     font-weight: 300;
     padding-left: 37px;
     padding-right: 37px;
-    padding-top: 55px;
     position: relative;
     top: -375px;
     left: 400px;
@@ -122,7 +119,7 @@ li {
 
 .form-signup-left {
     transform: translateX(-399px);
-    opacity: 1
+    opacity: 1;
 }
 
 .form-signup-down {
@@ -352,6 +349,7 @@ a.btn-signin:hover {
     color: black;
 }
 
+
 .forgot {
     height: 100px;
     width: 80%;
@@ -364,52 +362,6 @@ a.btn-signin:hover {
     transition: all 0.5s ease
 }
 
-.forgot-left {
-    transform: translateX(-400px);
-    opacity: 0
-}
-
-.forgot-fade {
-    opacity: 0
-}
-
-.forgot a {
-    color: rgba(255, 255, 255, .3);
-    font-weight: 400;
-    font-size: 13px;
-    text-decoration: none
-}
-
-.welcome {
-    width: 100%;
-    height: 50px;
-    position: relative;
-    color: rgba(35, 43, 85, 0.75);
-    opacity: 0;
-    transition: transform 1.5s ease .25s, opacity .1s ease 1s
-}
 
 
-#refresh {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: #ffffff;
-    width: 50px;
-    height: 50px;
-    border-radius: 25px;
-    box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.1);
-    padding: 13px 0 0 13px
-}
 
-.refreshicon {
-    fill: #d3d3d3;
-    transform: rotate(0deg);
-    transition: fill .25s ease, transform .25s ease
-}
-
-.refreshicon:hover {
-    cursor: pointer;
-    fill: $accent;
-    transform: rotate(180deg)
-}
