--- a/css/style.css
+++ b/css/style.css
@@ -17,36 +17,29 @@ body {
 }
 
 .frame {
-  height: 600px;
+  height: 420px;
   width: 460px;
   display: block;
+  padding-bottom: 20px;
   background-color: #595a59;
   margin-left: auto;
   margin-right: auto;
-  border-top: solid 1px rgba(255, 255, 255, 0.5);
+  border-top: solid 2px rgba(255, 255, 255, 0.5);
   border-radius: 20px;
   -webkit-box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.2);
-  overflow: hidden;
   -webkit-transition: all .5s ease;
   transition: all .5s ease;
 }
 
 .frame-long {
-  height: 615px;
-}
-
-.frame-short {
-  height: 400px;
-  margin-top: 50px;
-  -webkit-box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.1);
+  height: 550px;
 }
 
 .nav {
   width: 100%;
   height: 100px;
-  padding-top: 40px;
+  padding-top: 20px;
   opacity: 1;
   -webkit-transition: all .5s ease;
   transition: all .5s ease;
@@ -104,12 +97,10 @@ li {
 
 .form-signin {
   width: 430px;
-  height: 375px;
   font-size: 16px;
   font-weight: 300;
   padding-left: 37px;
   padding-right: 37px;
-  padding-top: 55px;
   -webkit-transition: opacity .5s ease, -webkit-transform .5s ease;
   transition: opacity .5s ease, -webkit-transform .5s ease;
   transition: opacity .5s ease, transform .5s ease;
@@ -123,13 +114,13 @@ li {
 }
 
 .form-signup {
+  margin-top: 160px;
   width: 430px;
   height: 375px;
   font-size: 12px;
   font-weight: 300;
   padding-left: 37px;
   padding-right: 37px;
-  padding-top: 55px;
   position: relative;
   top: -375px;
   left: 400px;
@@ -371,16 +362,6 @@ textarea:focus {
   transition: all .5s ease, top .5s ease .5s, height .5s ease .5s, background-color .5s ease .75s;
 }
 
-.btn-animate-grow {
-  width: 130%;
-  height: 625px;
-  position: relative;
-  left: -55px;
-  top: -420px;
-  color: rgba(255, 255, 255, 0);
-  background-color: white;
-}
-
 a.btn-signup:hover,
 a.btn-signin:hover {
   cursor: pointer;
@@ -401,102 +382,5 @@ a.btn-signin:hover {
   border-top: solid 1px rgba(255, 255, 255, 0.3);
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
-}
-
-.forgot-left {
-  -webkit-transform: translateX(-400px);
-          transform: translateX(-400px);
-  opacity: 0;
-}
-
-.forgot-fade {
-  opacity: 0;
-}
-
-.forgot a {
-  color: rgba(255, 255, 255, 0.3);
-  font-weight: 400;
-  font-size: 13px;
-  text-decoration: none;
-}
-
-.welcome {
-  width: 100%;
-  height: 50px;
-  position: relative;
-  color: rgba(35, 43, 85, 0.75);
-  opacity: 0;
-  -webkit-transition: opacity .1s ease 1s, -webkit-transform 1.5s ease .25s;
-  transition: opacity .1s ease 1s, -webkit-transform 1.5s ease .25s;
-  transition: transform 1.5s ease .25s, opacity .1s ease 1s;
-  transition: transform 1.5s ease .25s, opacity .1s ease 1s, -webkit-transform 1.5s ease .25s;
-}
-
-
-
-.btn-goback {
-  position: relative;
-  margin-right: auto;
-  top: -400px;
-  float: left;
-  padding: 8px;
-  width: 83%;
-  margin-left: 37px;
-  margin-right: 37px;
-  height: 35px;
-  border-radius: 20px;
-  font-weight: 700;
-  text-transform: uppercase;
-  font-size: 13px;
-  text-align: center;
-  color: #4cbc18;
-  margin-top: -8px;
-  border: solid 1px #4cbc18;
-  opacity: 0;
-  -webkit-transition: top 1.5s ease 0.35s, opacity .75s ease .5s;
-  transition: top 1.5s ease 0.35s, opacity .75s ease .5s;
-}
-
-.btn-goback-up {
-  top: -1080px;
-  opacity: 1;
-}
-
-a.btn-goback:hover {
-  cursor: pointer;
-  background-color: #4cbc18;
-  -webkit-transition: all .5s;
-  transition: all .5s;
-  color: #ffffff;
-}
-
-#refresh {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background-color: #ffffff;
-  width: 50px;
-  height: 50px;
-  border-radius: 25px;
-  -webkit-box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.1);
-  padding: 13px 0 0 13px;
-}
-
-.refreshicon {
-  fill: #d3d3d3;
-  -webkit-transform: rotate(0deg);
-          transform: rotate(0deg);
-  -webkit-transition: fill .25s ease, -webkit-transform .25s ease;
-  transition: fill .25s ease, -webkit-transform .25s ease;
-  transition: fill .25s ease, transform .25s ease;
-  transition: fill .25s ease, transform .25s ease, -webkit-transform .25s ease;
-}
-
-.refreshicon:hover {
-  cursor: pointer;
-  fill: #4cbc18;
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
 }
 /*# sourceMappingURL=style.css.map */
