--- a/web_app/static/css/style.scss
+++ b/web_app/static/css/style.scss
@@ -1,3 +1,4 @@
 @import "./elements/_variables.scss";
 @import "./elements/_main.scss";
 @import "./elements/_auth_form.scss";
+@import "./elements/nav_bar.scss";
