--- a/web_app/templates/auth.html
+++ b/web_app/templates/auth.html
@@ -1,31 +1,7 @@
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>
-        {% block title %}
-        Title
-        {% endblock %}
-    </title>
 
-    <!-- Own CSS -->
-    <link href="{{ url_for('static', filename='/css/style.css') }}" rel="stylesheet" type="text/css"/>
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-</head>
-
-<body>
+{% block content %}
     <div class="container">
 
         <svg width="400" height="180" style="margin: 0 auto; display: block">
@@ -44,14 +20,14 @@
             </div>
             <div ng-app ng-init="checked = false">
                 <!-- Login -->
-                <form class="form-signin" action="/auth?auth_type=login" method="post" name="form">
+                <form method="post" class="form-signin" action="/auth?auth_type=login" name="form">
                     <label for="l_email">Email</label>
                     <input name="l_email" class="form-styling" type="text" placeholder="" />
                     <label for="l_password">Password</label>
                     <input name="l_password" class="form-styling" type="password" placeholder="" />
                     <input name="cb_keep_logged_in" type="checkbox" id="checkbox" />
                     <label for="checkbox"><span class="ui"></span>Keep me signed in?</label>
-                    <button method="post" class="btn-animate btn-signin">Sign in </button>
+                    <button class="btn-animate btn-signin">Sign in </button>
                 
                     <a class="forgot-password" href="#">Forgot password?</a>
                 </form>
@@ -69,8 +45,7 @@
                 </form>
             </div>
         </div>
-
-</body>
+    </div>
 
 <script>
 
@@ -86,5 +61,4 @@
     });
 
 </script>
-
-</html>
+{% endblock %}
