--- a/web_app/templates/dashboard.html
+++ b/web_app/templates/dashboard.html
@@ -1,28 +1,11 @@
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+{% block nav %}
+    {% include "nav_bar.html" %}
+{% endblock %}
 
-    <!-- Own CSS -->
-    <link href="{{ url_for('static', filename='/css/style.css') }}" rel="stylesheet" type="text/css"/>
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-</head>
-
-    <a href="/auth" class="btn btn-primary" id="btn-add">Add</a>
-
-<body>
-</body>
-</html>
+{% block content %}
+    <div class="container">
+        <h1 style="font-size:20px; color:white"> Dashboard </h1>
+    </div>
+{% endblock %}
