--- a/web_app/static/css/elements/_nav_bar.scss
+++ b/web_app/static/css/elements/_nav_bar.scss
@@ -33,8 +33,8 @@
 }
 
 .badge {
-    height: 35px !important;
-    width: 35px !important;
+    height: 30px !important;
+    width: 30px !important;
     position: relative;
     margin-top: 55px;
     margin-right: 20px;
@@ -45,6 +45,7 @@
     display: flex !important;
     justify-content: center !important;
     align-items: center !important;
+    padding-right: 12px !important;
   }
     
 .glyph-icon {
@@ -56,5 +57,5 @@
 }
 
 .glyph-icon-notification {
-    margin-right: -42px;
+    margin-right: -36px;
 }
