--- a/web_app/templates/flash_alert.html
+++ b/web_app/templates/flash_alert.html
@@ -6,7 +6,7 @@
         {% if category == 'error' %}
             <div class="alert alert-danger alert-dismissable fade show" role="alert">
                 {{message}} 
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <button type="button" class="btn btn-danger close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
             </div>
         {% elif category == 'error' %}
