--- a/web_app/static/css/elements/_variables.scss
+++ b/web_app/static/css/elements/_variables.scss
@@ -1,4 +1,13 @@
-$primary:   rgb(54, 55, 53);
-$secondary: rgb(89, 90, 89);
+$primary: rgb(89, 90, 89) ;
+$primary-light:   rgb(60, 61, 59);
+$secondary:rgb(54, 55, 53);
 $accent:    rgb(76,188,24);
+$accent-darker:    rgb(49, 154, 0);
 
+$bg-primary3: rgb(89, 90, 89);
+$bg-primary2:  rgb(60, 61, 59);
+$bg-primary1:   rgb(30, 30, 30);
+
+$font-color: white;
+$font-secondary: rgba(223, 223, 223, 0.748);
+$font-color-invert: black;
