--- a/web_app/static/css/style.scss
+++ b/web_app/static/css/style.scss
@@ -1,4 +1,5 @@
-@import "./elements/_variables.scss";
-@import "./elements/_main.scss";
-@import "./elements/_auth_form.scss";
+@import "./elements/variables.scss";
+@import "./elements/main.scss";
+@import "./elements/auth_form.scss";
 @import "./elements/nav_bar.scss";
+@import "./elements/user_profile.scss";
