--- a/web_app/templates/auth.html
+++ b/web_app/templates/auth.html
@@ -1,64 +1,133 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
+<div style="padding-top: 50px">
+  <div class="container canvas-primary2">
+    <svg width="400" height="180" style="margin: 0 auto; display: block">
+      <rect
+        x="50"
+        y="20"
+        rx="20"
+        ry="20"
+        width="100"
+        height="100"
+        class="logo-square"
+      />
+      <rect
+        x="85"
+        y="70"
+        rx="20"
+        ry="20"
+        width="80"
+        height="80"
+        class="logo-square"
+      />
+      <rect
+        x="200"
+        y="40"
+        rx="20"
+        ry="20"
+        width="120"
+        height="120"
+        class="logo-square"
+      />
+      <rect
+        x="170"
+        y="10"
+        rx="20"
+        ry="20"
+        width="70"
+        height="70"
+        class="logo-square"
+      />
+    </svg>
 
+    <div class="frame-auth canvas-primary3">
+      <div class="auth-nav">
+        <ul class="links">
+          <li class="signin-active"><a class="btn btn-switch">Sign In</a></li>
+          <li class="signup-inactive">
+            <a class="btn btn-switch">Register</a>
+          </li>
+        </ul>
+      </div>
+      <div ng-app ng-init="checked = false">
+        <!-- Login -->
+        <form
+          method="post"
+          class="form-signin"
+          action="/auth?auth_type=login"
+          name="form"
+        >
+          <label for="l_email">Username or email</label>
+          <input name="l_email" class="form-styling" type="text" />
+          <label for="l_password">Password</label>
+          <input
+            name="l_password"
+            class="form-styling"
+            type="password"
+            placeholder=""
+          />
+          <input name="cb_remember_me" type="checkbox" value="matched" id="checkbox" />
+          <label for="checkbox"
+            ><span class="ui"></span>Keep me signed in?</label
+          >
+          <button class="btn-animate btn-signin">Sign in</button>
 
-{% block content %}
-    <div class="container">
-
-        <svg width="400" height="180" style="margin: 0 auto; display: block">
-            <rect x="50" y="20" rx="20" ry="20" width="100" height="100" class="logo-square" />
-            <rect x="85" y="70" rx="20" ry="20" width="80" height="80" class="logo-square" />
-            <rect x="200" y="40" rx="20" ry="20" width="120" height="120" class="logo-square" />
-            <rect x="170" y="10" rx="20" ry="20" width="70" height="70" class="logo-square" />
-        </svg>
-
-        <div class="frame-auth">
-            <div class="auth-nav">
-                <ul class="links">
-                    <li class="signin-active"><a class="btn btn-switch">Sign In</a></li>
-                    <li class="signup-inactive"><a class="btn btn-switch">Register</a></li>
-                </ul>
-            </div>
-            <div ng-app ng-init="checked = false">
-                <!-- Login -->
-                <form method="post" class="form-signin" action="/auth?auth_type=login" name="form">
-                    <label for="l_email">Username or email</label>
-                    <input name="l_email" class="form-styling" type="text"/>
-                    <label for="l_password">Password</label>
-                    <input name="l_password" class="form-styling" type="password" placeholder="" />
-                    <input name="cb_keep_logged_in" type="checkbox" id="checkbox" />
-                    <label for="checkbox"><span class="ui"></span>Keep me signed in?</label>
-                    <button class="btn-animate btn-signin">Sign in </button>
-                
-                    <a class="forgot-password" href="#">Forgot password?</a>
-                </form>
-                <!-- Signup -->
-                <form class="form-signup" action="/auth?auth_type=register" method="post" name="form">
-                    <label for="r_username">Username</label>
-                    <input name="r_username" class="form-styling" type="text" placeholder="" />
-                    <label for="r_email">Email</label>
-                    <input name="r_email" class="form-styling" type="text" placeholder="" />
-                    <label for="r_password">Password</label>
-                    <input name="r_password" class="form-styling" type="password" placeholder="" />
-                    <label for="r_password_verify">Verify Password</label>
-                    <input name="r_verify_password" class="form-styling" type="password" placeholder="" />
-                    <button method="post" class="btn-signup">Create Account </button>
-                </form>
-            </div>
-        </div>
+          <a class="forgot-password" href="#">Forgot password?</a>
+        </form>
+        <!-- Signup -->
+        <form
+          class="form-signup"
+          action="/auth?auth_type=register"
+          method="post"
+          name="form"
+        >
+          <label for="r_username">Username</label>
+          <input
+            name="r_username"
+            class="form-styling"
+            type="text"
+            placeholder=""
+          />
+          <label for="r_email">Email</label>
+          <input
+            name="r_email"
+            class="form-styling"
+            type="text"
+            placeholder=""
+          />
+          <label for="r_password">Password</label>
+          <input
+            name="r_password"
+            class="form-styling"
+            type="password"
+            placeholder=""
+          />
+          <label for="r_password_verify">Verify Password</label>
+          <input
+            name="r_verify_password"
+            class="form-styling"
+            type="password"
+            placeholder=""
+          />
+          <button method="post" class="btn-signup">Create Account</button>
+        </form>
+      </div>
     </div>
+  </div>
+</div>
 
 <script>
-
-    $(function () {
-        $(".btn-switch").click(function () {
-            $(".form-signin").toggleClass("form-signin-left");
-            $(".form-signup").toggleClass("form-signup-left");
-            $(".frame-auth").toggleClass("frame-long");
-            $(".signup-inactive").toggleClass("signup-active");
-            $(".signin-active").toggleClass("signin-inactive");
-            $(this).removeClass("idle").addClass("active");
-        });
+  $(function () {
+    $(".btn-switch").click(function () {
+      $(".form-signin").toggleClass("form-signin-left");
+      $(".form-signup").toggleClass("form-signup-left");
+      $(".frame-auth").toggleClass("frame-long");
+      $(".signup-inactive").toggleClass("signup-active");
+      $(".signin-active").toggleClass("signin-inactive");
+      $(this).removeClass("idle").addClass("active");
     });
+  });
+
 
 </script>
 {% endblock %}
