--- a/web_app/templates/nav_bar.html
+++ b/web_app/templates/nav_bar.html
@@ -1,24 +1,22 @@
-    <div class="d-flex flex-row justify-content-around nav-area">
-       
-       <a class="btn-nav-round"> 
-        <span class="glyph-icon fa-solid fa-chevron-left"></span>
-       </a>
-       
-       <div class="d-flex justify-content-center">
-            <a class="btn-nav-round">
-                <span class="glyph-icon fa-solid fa-bell glyph-icon-notification"></span>
-                <span class="badge"> 10 </span>
-            </a>
-            <a class="btn-nav-round btn-nav-profile">
-                <span class="glyph-icon fa-solid fa-user"></span>
-            </a>
-            <a class="btn-nav-round">
-                <span class="glyph-icon fa-solid fa-gear"></span>
-            </a>
-        </div>
+<div class="d-flex flex-row justify-content-around nav-area primary-canvas">
+  <a class="btn-nav-round">
+    <span class="glyph-icon fa-solid fa-chevron-left"></span>
+  </a>
 
-       <a class="btn-nav-round">
-           <span class="glyph-icon fa-solid fa-check"></span>
-       </a>
-    
-    </div>
+  <div class="d-flex justify-content-center">
+    <a class="btn-nav-round">
+      <span class="glyph-icon fa-solid fa-bell glyph-icon-notification"></span>
+      <span class="badge"> 10 </span>
+    </a>
+    <a href="/profile" class="btn-nav-round btn-nav-profile">
+      <span class="glyph-icon fa-solid fa-user"></span>
+    </a>
+    <a class="btn-nav-round">
+      <span class="glyph-icon fa-solid fa-gear"></span>
+    </a>
+  </div>
+
+  <a class="btn-nav-round">
+    <span class="glyph-icon fa-solid fa-check"></span>
+  </a>
+</div>
