--- a/web_app/static/css/elements/_main.scss
+++ b/web_app/static/css/elements/_main.scss
@@ -2,12 +2,68 @@
 html,
 body * {
     box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+    font-weight: normal;
+    text-transform: none !important;
 }
 
 body {
     background-size: cover;
-    background-color: $primary!important;
+    background-color: $bg-primary1 !important;
+}
+.modal-backdrop
+{
+    opacity:0.6 !important;
+}
+.hidden {
+    display: none !important;
+}
+
+.modal-content {
+    background-color: $bg-primary3 !important;
+    color: white !important;
+    border-radius: 20px !important;
+}
+
+.modal-title {
+    color: $font-color !important;
+    font-weight: bold !important;
+}
+
+.font-primary {
+    color: $font-color;
+}
+
+.font-secondary {
+    color: $font-secondary;
+}
+
+.font-primary2 {
+    color: $font-color-invert;
+}
+
+
+.bg-primary1 {
+    background-color: $bg-primary1 !important;
+}
+
+.bg-primary2 {  
+    background-color: $bg-primary2 !important;
+}
+
+.bg-primary3 {  
+    background-color: $bg-primary3 !important;
+}
+
+.card {
+    border: none !important;
+}
+
+.alert-short {
+    padding: 10px;
+    text-align: center;
+    color: black !important;
+    font-weight: bold !important;
+    position: relative;
 }
 
 .container {
@@ -16,11 +72,32 @@ body {
     padding-bottom: 100px;
 }
 
+.no-bg {
+    background: none !important;
+}
+
+.canvas-primary1 {
+    background-color: $bg-primary1 !important;
+    box-shadow: 0px 5px 15px -4px rgba(0,0,0,0.55);
+    border-radius: 20px;
+}
+.canvas-primary2 {
+    background-color: $bg-primary2 !important;
+    box-shadow: 0px 5px 15px -4px rgba(0,0,0,0.55);
+    border-radius: 20px;
+}
+.canvas-primary3 {
+    background-color: $bg-primary3 !important;
+    box-shadow: 0px 5px 15px -4px rgba(0,0,0,0.55);
+    border-radius: 20px;
+}
+
+
 .logo-square {
     fill: $accent;
     stroke: $accent;
     stroke-width:5;
-    opacity:0.5
+    opacity:0.5;
 }
 
 .frame {
