--- a/web_app/templates/base.html
+++ b/web_app/templates/base.html
@@ -1,57 +1,59 @@
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>
-        {% block title %}
-            Title
-        {% endblock %}
-    </title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>{% block title %} Title {% endblock %}</title>
 
     <!-- Own CSS -->
-    <link href="{{ url_for('static', filename='/css/style.css') }}" rel="stylesheet" type="text/css"/>
+    <link
+      href="{{ url_for('static', filename='/css/style.css') }}"
+      rel="stylesheet"
+      type="text/css"
+    />
 
     <!-- Bootstrap CSS -->
-    <link href="{{ url_for('static', filename='/vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet" type="text/css"/>
-    <script src="https://kit.fontawesome.com/2a1c370395.js" crossorigin="anonymous"></script>
-
+    <link
+      href="{{ url_for('static', filename='/vendor/bootstrap/css/bootstrap.min.css')}}"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script
+      src="https://kit.fontawesome.com/2a1c370395.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Bootstrap JS -->
-    <script src="{{ url_for('static', filename='/vendor/bootstrap/js/bootstrap.min.js')}}" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-</head>
-
-<body>
-
-    {% include "flash_alert.html" %}
-
-    {% block nav %}
-
-    {% endblock %}
-
-    {% block content %}
-
-    {% endblock %}
-
     <script
-    src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"
-  ></script>
+      src="{{ url_for('static', filename='/vendor/bootstrap/js/bootstrap.min.js')}}"
+      type="text/javascript"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  </head>
 
+  <body>
+    {% block flash_alert %}
+      {% include "flash_alert.html" %}
+    {% endblock %}
 
-</body>
+    {% block nav %} {% endblock %} 
+      
+    {% block content %} {% endblock %} 
+    
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
